--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.9",
+    "lucide-react": "^0.503.0",
     "nanostores": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.4"
   }
 }
