--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@ai-sdk/mistral": "^1.2.7",
     "@astrojs/react": "^4.2.6",
     "@lucide/astro": "^0.507.0",
     "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "ai": "^4.3.13",
     "astro": "^5.7.9",
     "d3": "^7.9.0",
     "lucide": "^0.507.0",
